# CSSR

./: .Rbuildignore  .gitignore  .gitmodules  CMakeLists.txt  DESCRIPTION  NAMESPACE  README.md  testCSSR.R
R/: CSSR.R  RcppExports.R
cpp/: .gitignore  AllStates.cpp  AllStates.h  CMakeLists.txt  Common.h  G_Array.cpp  G_Array.h  Hash.cpp  Hash2.cpp  Hash2.h  Machine.cpp  Machine.h  Main.cpp  Main.h  Makefile  ParseTree.cpp  ParseTree.h  States.cpp  States.h  SymbolToIndexMap.cpp  SymbolToIndexMap.h  Test.cpp  Test.h
hs/: .sosrc  Makefile  cssr.cabal  package.yaml
hs/bench/: FlameGraph.hs  Main.hs
hs/src/CSSR/: Algorithm.hs  Prelude.hs  TypeAliases.hs
hs/src/CSSR/Prelude/: Mutable.hs
hs/src/Data/CSSR/: Alphabet.hs  Debug.hs  Test.hs  Types.hs
hs/src/Data/CSSR/Leaf/: Probabilistic.hs
hs/src/Data/Hist/: Tree.hs
hs/src/Data/Looping/: MTree.hs  Tree.hs
hs/src/Data/Parse/: MTree.hs  Tree.hs
hs/src/Data/Statistics/: KologorovSmirnov.hs
hs/test/CSSR/Prelude/: Test.hs
hs/test/Data/Hist/: TreeSpec.hs
hs/test/Data/Parse/: MTreeSpec.hs
man/: runCSSR.Rd
paper/: .sosrc  Makefile  algorithm.tex  edgesets-proofs.tex  new-procedure.bbl  new-procedure.tex
paper/sections/: background.tex  consistency.tex  introduction.tex  phase-i.tex  phase-ii.tex  phase-iii.tex  target.tex
scala/: build.sbt
scala/src/main/scala/com/typeclassified/hmm/cssr/: Aliases.scala  CSSR.scala
scala/src/main/scala/com/typeclassified/hmm/cssr/cli/: Config.scala  Parser.scala
scala/src/main/scala/com/typeclassified/hmm/cssr/measure/: InferProbabilities.scala  RelativeEntropyRate.scala
scala/src/main/scala/com/typeclassified/hmm/cssr/parse/: Alphabet.scala
scala/src/main/scala/com/typeclassified/hmm/cssr/state/: AllStates.scala
scala/src/main/scala/com/typeclassified/hmm/cssr/trees/: LoopingTree.scala  ParseTree.scala  Tree.scala
scala/src/test/scala/com/typeclassified/hmm/cssr/parity/: Initialization.scala  v010Machines.scala
scala/src/test/scala/com/typeclassified/hmm/cssr/parse/: LeafAsserts.scala  LeafTests.scala  TreeScenario.scala  TreeTests.scala
scala/src/test/scala/com/typeclassified/hmm/cssr/state/: EquivalenceClassTests.scala
src/: AllStates.cpp  AllStates.h  Hash.cpp  Hash2.cpp  Machine.cpp  Machine.h  Main.cpp  Main.h  ParseTree.cpp  ParseTree.h  RCSSR.cpp  RCSSR.h  README.md  RcppExports.cpp  Test.cpp
(+1 files in other folders)
